force-app/main/default/objects/Opportunity/fields/Approval_Count__c.field-meta.xml
<CustomField>
    <fullName>Approval_Count__c</fullName>
    <label>Approval Count</label>
    <summaryForeignKey>Approval__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>