force-app/main/default/objects/Opportunity/fields/Box_Folder_ID__c.field-meta.xml
<CustomField>
    <fullName>Box_Folder_ID__c</fullName>
    <label>Box Folder ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>