force-app/main/default/objects/Opportunity/fields/Dealer_Representative__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Representative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Dealer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>