force-app/main/default/objects/Opportunity/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>