force-app/main/default/objects/Opportunity/fields/Equipment_Count__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Count__c</fullName>
    <label>Equipment Count</label>
    <summaryForeignKey>Equipment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <type>Summary</type>
</CustomField>