force-app/main/default/objects/Opportunity/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <label>Equipment Description</label>
    <type>TextArea</type>
</CustomField>