force-app/main/default/objects/Opportunity/fields/Existing_Business__c.field-meta.xml
<CustomField>
    <fullName>Existing_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this a repeat account</description>
    <label>Existing Business</label>
    <type>Checkbox</type>
</CustomField>