force-app/main/default/objects/Opportunity/fields/Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>Funded_Date__c</fullName>
    <description>The date on which this opportunity was funded.</description>
    <label>Funded Date</label>
    <type>Date</type>
</CustomField>