force-app/main/default/objects/Opportunity/fields/Has_Been_Approved__c.field-meta.xml
<CustomField>
    <fullName>Has_Been_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true the first time this Opportunity reaches the Approved stage. Never reverts to false.</description>
    <label>Has Been Approved</label>
    <type>Checkbox</type>
</CustomField>