force-app/main/default/objects/Opportunity/fields/Intake_Source__c.field-meta.xml
<CustomField>
    <fullName>Intake_Source__c</fullName>
    <label>Intake Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jotform</fullName>
            </value>
            <value>
                <fullName>Partner Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>