force-app/main/default/objects/Opportunity/fields/Jotform_ID__c.field-meta.xml
<CustomField>
    <fullName>Jotform_ID__c</fullName>
    <description>Jotform submission unique id from credit application</description>
    <externalId>true</externalId>
    <label>Jotform ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>