force-app/main/default/objects/Opportunity/fields/Lender_Summary__c.field-meta.xml
<CustomField>
    <fullName>Lender_Summary__c</fullName>
    <description>lender facing summary for opportunity</description>
    <label>Lender Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>