force-app/main/default/objects/Opportunity/fields/Private_Party__c.field-meta.xml
<CustomField>
    <fullName>Private_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Party</label>
    <type>Checkbox</type>
</CustomField>