force-app/main/default/objects/Opportunity/fields/Private_Party_Seller__c.field-meta.xml
<CustomField>
    <fullName>Private_Party_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Private Party Seller</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Private Party Seller)</relationshipLabel>
    <relationshipName>OppPrivatePartySeller</relationshipName>
    <type>Lookup</type>
</CustomField>