force-app/main/default/objects/Opportunity/fields/split_representative__c.field-meta.xml
<CustomField>
    <fullName>split_representative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Split Representative</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Split Representative)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>