force-app/main/default/objects/Opportunity/fields/Total_Equipment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Equipment_Cost__c</fullName>
    <label>Total Equipment Cost</label>
    <summarizedField>Equipment__c.Total_Cost__c</summarizedField>
    <summaryForeignKey>Equipment__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>SUM</summaryOperation>
    <type>Summary</type>
</CustomField>