force-app/main/default/objects/Opportunity/validationRules/Mandatory_Submission_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandatory_Submission_Fields</fullName>
    <active>true</active>
    <description>When Type is Equipment, Equipment Description must be filled in and at least one Equipment record must be linked to move past Internal Review (Submitted and beyond).</description>
    <errorConditionFormula>AND(
  CASE(StageName,
    &quot;Submitted&quot;, 1,
    &quot;Approved&quot;, 1,
    &quot;Pre Docs&quot;, 1,
    &quot;Docs Requested&quot;, 1,
    &quot;Docs Out&quot;, 1,
    &quot;Funding Request Sent&quot;, 1,
    &quot;Funded&quot;, 1,
    &quot;FPC&quot;, 1,
    0) = 1,
  ISPICKVAL(Type, &quot;Equipment&quot;),
  OR(
    ISBLANK(Equipment__c),
    Equipment_Count__c = 0
  )
)</errorConditionFormula>
    <errorDisplayField>Equipment__c</errorDisplayField>
    <errorMessage>Equipment Description must be filled in and at least one Equipment record must be linked to submit an Equipment deal.</errorMessage>
</ValidationRule>