force-app/main/default/objects/Opportunity/validationRules/Submitted_Requires_Account.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Requires_Account</fullName>
    <active>true</active>
    <description>Account Name must be populated to move to Submitted.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Submitted&quot;),
  ISBLANK(AccountId)
)</errorConditionFormula>
    <errorDisplayField>AccountId</errorDisplayField>
    <errorMessage>Account Name is required before moving to Submitted.</errorMessage>
</ValidationRule>