force-app/main/default/objects/Opportunity/validationRules/Submitted_Requires_Dealer.validationRule-meta.xml
<ValidationRule>
    <fullName>Submitted_Requires_Dealer</fullName>
    <active>false</active>
    <description>Dealer is required to move to Submitted unless the deal is marked as Private Party.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(StageName, &quot;Submitted&quot;),
  ISBLANK(Dealer__c),
  NOT(Private_Party__c)
)</errorConditionFormula>
    <errorDisplayField>Dealer__c</errorDisplayField>
    <errorMessage>Dealer is required before submitting. If this is a private party deal, check the Private Party checkbox.</errorMessage>
</ValidationRule>